Add Simple Form - Sign up & Session

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -2,7 +2,7 @@
 /*$baseFontFamily: Oxygen;
 @import url(http://fonts.googleapis.com/css?family=Oxygen);*/
 
-$btnPrimaryBackground:Green;
+$btnPrimaryBackground:Blue;
 $navbarBackgroundHighlight: white;
 $navbarBackground: white;
 
