--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class ="footer">
 	<small>
-		<%=link_to "One Month Rails", "http://onemonthrails.com" %>
-		by <%=link_to "Mattan Griffel", "http://mattangriffel.com" %>
+		<%=link_to "One Month Rails - cajtnguyen", "http://www.skillshare.com/Teach-Yourself-to-Code-One-Month-Rails/1289605848/1921775376/projects/6067" %>
+		by <%=link_to "John Nguyen", "http://www.linkedin.com/in/cajtnguyen/" %>
 	</small>
 </div>
