--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,8 @@
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: 'form-horizontal'}) do |f| %>
   <%= f.error_notification %>
 
-  <div><%= f.input :email, :autofocus => true %></div>
+  <div><%= f.input :name, :autofocus => true %></div>
+  <div><%= f.input :email %></div>
   <div><%= f.input :password %></div>
   <div><%= f.input :password_confirmation %></div>
 
