Added Pins need to edit List

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <h1>About</h1>
 <p>
-	<%= link_to "One Month Rails", "http://onemonthrails.com" %>
+	<%= link_to "Science Snob", "#" %>
 	is a project to teach 
 	<%= link_to "Ruby On Rails", "httlp://rubyonrails.org" %>
-in one month. This is the sample application.
+in one month. This is the sample application, and I hope you like it. 
 </p>
