--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,11 +2,11 @@
 	<h1>You're logged in!</h1>
 <% else %>
 <div class="hero-unit">
-	<h1>Welcome to One Month Rails!</h1>
+	<h1>Welcome to Science Snob!</h1>
 	<p>
 	<p>
 		You've found the home page for the
-		<%=link_to "One Month Rails", "http://onemonthrails.com" %>
+		<%=link_to "Science Snob", "#" %>
 		application.
 	</p>
 	<p>
