--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,6 +1,6 @@
 /* You could change the font */
-/*$baseFontFamily: Oxygen;
-@import url(http://fonts.googleapis.com/css?family=Oxygen);*/
+$baseFontFamily: Roboto;
+@import url(http://fonts.googleapis.com/css?family=Roboto);
 
 $btnPrimaryBackground:Blue;
 $navbarBackgroundHighlight: white;
