--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <h1>About</h1>
 <p>
-	<%= link_to "Science Snob", "#" %>
+	<%= link_to "Science Snobs", "#" %>
 	is a project to teach 
 	<%= link_to "Ruby On Rails", "httlp://rubyonrails.org" %>
 in one month. This is the sample application, and I hope you like it. 
