--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,3 +4,7 @@
 		by <%=link_to "John Nguyen", "http://www.linkedin.com/in/cajtnguyen/" %>
 	</small>
 </div>
+
+      <!--<footer>
+        <p>By <a href="#">John Nguyen</a> of <a href="http://alittlecode.com/">aLittleCode.com</a> for <a href="http://webdesign.tutsplus.com/">webdesign.tutsplus.com</a></p>
+      </footer>-->
