--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,7 @@
-<div class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
+      <!-- Be sure to leave the brand out there if you want it shown
+      <%= link_to "Science Snobs", root_path, class: "brand" %> -->
  
-      <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
- 
-      <!-- Be sure to leave the brand out there if you want it shown -->
-      <%= link_to "Science Snobs", root_path, class: "brand" %>
- 
-      <!-- Everything you want hidden at 940px or less, place within here -->
+      <!-- Everything you want hidden at 940px or less, place within here
       <div class="nav-collapse collapse">
       	<ul class="nav">
       		<li><%= link_to "Home", root_path %></li>
@@ -26,8 +15,42 @@
 	  			  <li><%= link_to "Login", new_user_session_path %></li>
           <% end %>
 	  		</ul>
-      </div>
+      </div>-->
  
+      <div class="navbar navbar-fixed-top">
+            <div class="navbar-inner">
+              <div class="container">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </a>
+                <%= link_to "Science Snobs", root_path, class: "brand" %>
+                <div class="nav-collapse">
+                  <ul class="nav">
+                    <li><%= link_to "Home", root_path %></li>
+                    <li><%= link_to "About Us", about_path %></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            Login
+                            <b class="caret"></b>
+                      </a>
+                      <ul class="dropdown-menu">
+                        <% if user_signed_in? %>
+                          <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+                          <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+                        <% else %>
+                          <li><%= link_to "Sign In", new_user_session_path %></li>
+                        <% end %>
+                      </ul>
+                    </li><!-- dropdown -->
+                  </ul><!-- /.nav -->
+                </div><!--/.nav-collapse -->
+              </div><!-- /.container -->
+            </div><!-- /.navbar-inner -->
+          </div><!-- /.navbar -->
+
     </div>
   </div>
 </div>
