--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,95 @@
 <% if user_signed_in? %>
 	<h1>You're logged in!</h1>
 <% else %>
+
 <div class="hero-unit">
-	<h1>Welcome to Science Snobs!</h1>
-	<p>
-	<p>
-		You've found the home page for the
-		<%=link_to "Science Snobs", "#" %>
-		application.
-	</p>
-	<p>
-		<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
-	</p>
+  <h1>Welcome to Science Snobs!</h1>
+  <p>
+  <p>
+    You've found the home page for the
+    <%=link_to "Science Snobs", "#" %>
+    application.
+  </p>
+  <p>
+    <%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
+  </p>
 </div>
+
+<!--  Carousel - consult the Twitter Bootstrap docs at 
+      http://twitter.github.com/bootstrap/javascript.html#carousel -->
+<div id="this-carousel-id" class="carousel slide"><!-- class of slide for animation -->
+  <div class="carousel-inner">
+    <div class="item active"><!-- class of active since it's the first item -->
+      <img src="http://cghub.com/files/Image/133001-134000/133283/170_max.jpg" alt="" />
+      <div class="carousel-caption">
+        <p>Science Snobs!</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://i.imgur.com/RpJTK.jpg" alt="" />
+      <div class="carousel-caption">
+        <p>Moar Science Snobs!!</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://s3.media.squarespace.com/production/465215/5366925/wp-content/uploads/2009/05/ironsky_art1.jpg" alt="" /> <!--http://placehold.it/1200x480-->
+      <div class="carousel-caption">
+        <p>Even moar Science Snobs!!!</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://i1.sndcdn.com/artworks-000030117474-zgs838-original.jpg?271c828" alt="" />
+      <div class="carousel-caption">
+        <p>Science Snobs over 9000!</p>
+      </div>
+    </div>
+  </div><!-- /.carousel-inner -->
+  <!--  Next and Previous controls below
+        href values must reference the id for this carousel -->
+    <a class="carousel-control left" href="#this-carousel-id" data-slide="prev">&lsaquo;</a>
+    <a class="carousel-control right" href="#this-carousel-id" data-slide="next">&rsaquo;</a>
+</div><!-- /.carousel -->
+
+
+<div class="container">
+
+<!-- Example row of columns -->
+      <div class="row">
+        <div class="span4">
+          <h2>Heading</h2>
+           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
+        <div class="span4">
+          <h2>Heading</h2>
+           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+       </div>
+        <div class="span4">
+          <h2>Heading</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
+      </div>
+
+      <hr>
+
+  </div> <!-- /container -->
+
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
+    <!-- Bootstrap jQuery plugins compiled and minified -->
+    <script src="js/bootstrap.min.js"></script>
+    <script>
+      $(document).ready(function(){
+        $('.carousel').carousel({
+          interval: 4000
+        });
+      });
+    </script>
 
 <% end %>
