Image Uploading with Paperclip

--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,9 +1,11 @@
-<h1>Listing pins</h1>
+<h1>Awesome freaking science!</h1>
 
 <table class="table tabel-striped">
   <thead>
     <tr>
-      <th>Description</th>
+      <th>Post </th>
+      <th>Description </th>
+      <th>Options </th>
       <th></th>
       <th></th>
       <th></th>
@@ -18,4 +20,4 @@
 
 <br />
 
-<%= link_to 'New Pin', new_pin_path %>
+<%= link_to 'New Post', new_pin_path %>
