--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -3,8 +3,8 @@ $baseFontFamily: Roboto;
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 
 $btnPrimaryBackground:Blue;
-$navbarBackgroundHighlight: white;
-$navbarBackground: white;
+$navbarBackgroundHighlight: black;
+$navbarBackground: black;
 
 @import 'bootstrap';
 
