--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,8 +1,9 @@
 <tr>
+	<td><%= image_tag pin.image (:thumb) %></td>
   <td><%= pin.description %></td>
   <td><%= link_to 'Show', pin %></td>
   <% if current_user == pin.user %>
 	  <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-	  <td><%= link_to 'Delete', pin, method: :delete, data: { confirm: 'Are you sure you want to delete this pin?' } %></td>
+	  <td><%= link_to 'Delete', pin, method: :delete, data: { confirm: 'Are you sure you want to delete this post?' } %></td>
   <% end %>
 </tr>
