--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,17 +31,23 @@
                     <li><%= link_to "Home", root_path %></li>
                     <li><%= link_to "About Us", about_path %></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Login
-                            <b class="caret"></b>
-                      </a>
-                      <ul class="dropdown-menu">
-                        <% if user_signed_in? %>
-                          <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-                          <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-                        <% else %>
-                          <li><%= link_to "Sign In", new_user_session_path %></li>
+                  </ul>
+                    <ul class="nav pull-right">
+                      <% if user_signed_in? %>
+                            <li><%= link_to "Add + ", new_pin_path %></li>
+                              <li class="dropdown">
+                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    Login
+                                    <b class="caret"></b>
+                              </a>
+                              <ul class="dropdown-menu">
+                            <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+                            <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+                          <% else %>
+                            <li><%= link_to "Sign In", new_user_session_path %></li>
+                    </ul>
+                    
+
                         <% end %>
                       </ul>
                     </li><!-- dropdown -->
