--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,23 +1,3 @@
-<h1>Awesome freaking science!</h1>
-
-<table class="table tabel-striped">
-  <thead>
-    <tr>
-      <th>Post </th>
-      <th>Description </th>
-      <th>Options </th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-<tbody>
+<div id="pins">
   <%= render @pins %>
-</tbody>
-
-</table>
-
-<br />
-
-<%= link_to 'New Post', new_pin_path %>
+</div>
