--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
                 <%= link_to "Science Snobs", root_path, class: "brand" %>
                 <div class="nav-collapse">
                   <ul class="nav">
-                    <li><%= link_to "Home", root_path %></li>
+                    <li><%= link_to "Home", home_path %></li>
                     <li><%= link_to "About Us", about_path %></li>
                     <li><a href="#contact">Contact</a></li>
                   </ul>
