--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
 	<h1>Awww Yeah! Welcome back.</h1>
-    
+    <li><%= link_to "Gallery", home_path %></li>
 <% else %>
 
 <div class="hero-unit">
