--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,7 +12,7 @@
 
   <div><%= f.input :password, lable: "New Password", autocomplete: "off" %></div>
 
-  <div><%= f.input :password_confirmation, label: "New Password Confirmation", autocomplete: "off" %>
+  <div><%= f.input :password_confirmation, label: "New Password Confirmation", autocomplete: "off" %>   </div>
 
   <div><%= f.input :current_password, lable: "(we need your current password to confirm your changes)" %> </div>
 
