--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,7 +30,7 @@
                   <ul class="nav">
                     <li><%= link_to "Gallery", home_path %></li>
                     <li><%= link_to "About Us", about_path %></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><%= link_to "Contact Us", contact_path %></li>
                   </ul>
                     <ul class="nav pull-right">
                       <% if user_signed_in? %>
