Add Image Uploading Via URL

--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -4,9 +4,13 @@
   <%= f.full_error :image_content_type, class: "alert alert-error" %>
 
   <div class="form-inputs">
-    <%= f.input :image, label: "Upload a funny image" %>
+        <%= f.input :image, label: "Upload a funny image" %>
+        <%= f.input :image_remote_url, label: "or enter a URL" %>
     <%= f.input :description, as: :text, input_html: {rows: "3"} %>
   </div>
+
+
+
 
   <div class="form-actions">
     <%= f.button :submit, class: "btn btn-primary" %>
